- `host run/install/update` now fail closed when `--out` overlaps the `releaseDir` (`HOST_OUT_CONFLICTS_RELEASE_DIR`), preventing receipt writes from mutating the release source being verified.
- `safe-run`, `run`, and `examine` now fail closed when `--out` equals or overlaps the input path (`*_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
- `email unpack` and `email safe-run` now also fail closed when `--out` equals or overlaps the input path, preventing staged-finalize cleanup from deleting or replacing source email inputs or normalized email exports.
- `intake` now also fails closed when `--out` equals or overlaps the input path (`INTAKE_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
- `ticket-pack` now fails closed when `--out` equals or overlaps the source out-root (`TICKET_PACK_OUT_CONFLICTS_INPUT`), preventing self-packing and staged bundle writes inside the evidence source tree.
- `license issue` now fails closed when `--out` matches `--key` (`LICENSE_OUT_CONFLICTS_KEY`), preventing accidental overwrite of the private signing key file.
- `export-json --format normalized_v0` now fails closed when `--out` targets known source evidence files in the source out-root (`EXPORT_JSON_OUT_CONFLICTS_SOURCE`), preventing accidental overwrite of receipts/reports used for normalization.
- `watch` now fails closed when `--out-root` equals or overlaps the watched target (`WATCH_OUT_ROOT_CONFLICTS_TARGET`), preventing self-trigger loops and self-generated drift under the watched tree.
- Compare operator receipts now include full compare evidence links (`compare_receipt.json`, `compare_report.txt`, `weftend/README.txt`) instead of compare-receipt-only linkage.
- Compare operator receipts now also include `weftend/privacy_lint_v0.json`, and compare runs perform a final no-write privacy-lint recheck after final operator receipt write.